--- a/assets/js/data/components/nav.html
+++ b/assets/js/data/components/nav.html
@@ -4,8 +4,9 @@
             <img src="assets/images/logo_full_light.png" alt="TreasureDelightCafe" height="64">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            style="color: #ffffff !important;">
+            <span class="navbar-toggler-icon" style="color: #ffffff !important;"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
