--- a/assets/js/data/components/nav.html
+++ b/assets/js/data/components/nav.html
@@ -5,8 +5,11 @@
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-            style="color: #ffffff !important;">
-            <span class="navbar-toggler-icon" style="color: #ffffff !important;"></span>
+            style="color: #ffffff !important; max-width: 50px; border: #a3fd9b 1px solid; padding-left: 3px; padding-right: 3px;">
+            <div style="border: #a3fd9b 1px solid; margin: 7px"></div>
+            <div style="border: #a3fd9b 1px solid; margin: 7px"></div>
+            <div style="border: #a3fd9b 1px solid; margin: 7px"></div>
+
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
